Prevent flicker in Safari (Fixes #16)

--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -28,9 +28,11 @@
 
             .odometer-ribbon-inner
                 display: block
+                -webkit-backface-visibility: hidden
 
             .odometer-value
                 display: block
+                -webkit-transform: translateZ(0)
 
                 &.odometer-last-value
                     position: absolute
