--- a/themes/odometer-theme-plaza.css
+++ b/themes/odometer-theme-plaza.css
@@ -47,9 +47,11 @@
 }
 .odometer.odometer-auto-theme .odometer-digit .odometer-ribbon-inner, .odometer.odometer-theme-plaza .odometer-digit .odometer-ribbon-inner {
   display: block;
+  -webkit-backface-visibility: hidden;
 }
 .odometer.odometer-auto-theme .odometer-digit .odometer-value, .odometer.odometer-theme-plaza .odometer-digit .odometer-value {
   display: block;
+  -webkit-transform: translateZ(0);
 }
 .odometer.odometer-auto-theme .odometer-digit .odometer-value.odometer-last-value, .odometer.odometer-theme-plaza .odometer-digit .odometer-value.odometer-last-value {
   position: absolute;
